<resources>
    <string name="app_name">Project Managment Application</string>
    <string name="nav_progress">Track Progress</string>
    <string name="nav_messages">Send Message</string>
    <string name="nav_notifications">Notifications</string>
    <string name="nav_team_members">Team Members</string>
    <string name="to">to</string>
    <string name="from">from</string>
    <string name="subject">subject</string>
    <string name="content">content</string>
    <string name="mark_as_inactive">Mark as Inactive</string>
    <string name="view_assigned_task">View Assigned Task</string>
    <string name="remove_member">Remove Member</string>
    <string name="remove_task">Remove Task</string>
    <string name="view_comments">View Comments</string>
    <string name="add_a_comment">Add a comment...</string>
    <string name="send_comment">Send comment</string>
    <string name="comments">Comments</string>
    <string name="delete">Delete</string>
    <string name="view_sender_profile">View Sender Profile</string>
    <string name="view_task_details">View Task Details</string>
    <string-array name="role_filters">
        <item>All Roles</item>
        <item>Developer</item>
        <item>Designer</item>
        <item>Manager</item>
        <item>QA Engineer</item>
    </string-array>

    <string-array name="notification_filters">
        <item>All Notifications</item>
        <item>Comments Only</item>
        <item>Emails Only</item>
        <item>Show Archived Emails</item>
    </string-array>
</resources>